--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -3,9 +3,9 @@
   padding:0;
   text-decoration: none;
 }
-.container{
+/* .container{
   display:flex;
-}
+} */
 .main.max-w-4x2{
   width: 100%;
   padding: 20px;
