--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,23 +1,29 @@
-*{
+/* *{
   margin:0;
   padding:0;
   text-decoration: none;
-}
-/* .container{
-  display:flex;
 } */
+.container_sidebar{
+  width: 2000vw;
+  height: 100vh;
+}
+
 .main.max-w-4x2{
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
   margin-left: 15rem;
 }
-main{
+
+
+/* main{
+  background-image: url('../assets/Background.png');
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
   margin-left: 0;
-}
+  height: 100%;
+} */
 body {
 
   overflow-x: hidden; /* Hide horizontal scrollbar */
@@ -42,6 +48,36 @@ body {
   font-size: 25px;
   margin-left: 50px;
 }
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+.collapsed .centered {
+  width: 50px; /* Chiều rộng nút khi thu gọn */
+}
+.barsdp{
+  display: flex;
+  font-size: 24px;
+  margin-right: 13.5px;
+  transition: max-height 100s Ease-out curve;
+  margin-left: 15px;
+ 
+}
+
+.dropdown {
+  transition: max-height 100s Ease-out curve;
+}
+
+.icon {
+  margin-right: 22px;
+  margin-left: 20px;
+  display: flex;
+  font-size: 24px;
+}
+
 .link{
   display: flex;
   color: #fff;
@@ -60,4 +96,39 @@ body {
 }
 .icon, .link_text{
   font-size: 20px;
+}
+.profile-logout-container {
+  position: absolute;  
+  text-align: center;
+  bottom: 20px;
+ 
+}
+
+.profile-logout-container {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  font-size: 25px;
+
+}
+.dropdwon{
+  align-items: center;
+}
+.profile, .logout {
+  display: inline-block;
+}
+
+@media (max-width: 768px) {
+  .profile, .logout .home {
+    width: 100%;
+    text-align: center;
+  }
+}
+.profile{
+  margin-right: 15px;
+}
+.logout{
+  
+  color: red;
 }
