--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -89,4 +89,30 @@
 .btn-si:hover {
     color: orange;
 
+
+}
+
+.full-width-button {
+    width: 100%;
+}
+
+.full-width-button:hover {
+    width: 100%;
+}
+
+button.block-user {
+    width: auto;
+}
+
+button.block-user:hover {
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn.block-user {
+    position: fixed;
+
 }
