--- a/src/styles/Username.module.css
+++ b/src/styles/Username.module.css
@@ -1,31 +1,95 @@
-.glass{
+.glass {
     background-image: url('../assets/Background.png');
     border-radius: 16px;
     box-shadow: 0 4px 30px #4747470b;
     backdrop-filter: blur(7.1px);
     margin: 30px 0;
     border: 1px solid rgba(255, 255, 255, 0.3);
+    margin-top: 70px;
     @apply border-4 border-gray-50 shrink-0 h-3/4 w-[30%] rounded-3xl py-20 px-7 min-w-max;
 }
 
-.profile_img{
-    @apply border-4 border-gray-100 w-[135px] rounded-full shadow-lg cursor-pointer;
-    @apply hover:border-gray-200;
+.profile_img {
+    border-width: 4px;
+    border-color: #f7fafc;
+    width: 135px;
+    border-radius: 9999px;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    cursor: pointer;
 }
 
-.textbox{
-    @apply border-0 px-5 py-4 rounded-xl w-3/4 shadow-sm text-lg;
-    @apply focus:outline-none;
+.profile_img:hover {
+    border-color: #edf2f7;
 }
 
-.btn{
+.textbox {
+    border: 0;
+    padding: 10px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-radius: 10px;
+    width: 75%;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    font-size: 1.125rem;
+}
+
+.textbox:focus {
+    outline: none;
+}
+
+
+
+
+
+
+
+.btn {
     @apply border bg-indigo-500 w-3/4 py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: #ff6a6a;
 }
 
-input[type='file']{
+input[type='file'] {
     display: none;
+}
+
+.backgroundImageStyle {
+    background-image: url("../../src/assets/1.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.video_container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.video_container video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.6;
+}
+
+.glassRegister {
+
+    border-radius: 16px;
+    box-shadow: 0 4px 30px #4747470b;
+    backdrop-filter: blur(7.1px);
+    margin: auto;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    margin-top: 80px;
 }
