--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,12 +1,3 @@
-.nav-item {
-    transition: color 0.3s;
-}
-
-.nav-item:hover {
-    color: orange;
-
-}
-
 .font-medium-1 {
     color: white;
     background-color: orange;
@@ -17,7 +8,6 @@
 
 .font-medium-1:hover {
     color: red;
-
 }
 
 .flex-start {
@@ -35,8 +25,6 @@
 
 .bg-a {
     background-color: orange;
-
-
 }
 
 .bg-c {
@@ -49,10 +37,10 @@
 
 .border-row {
     background-color: rgb(238, 225, 153);
-    border: 2px solid rgb(230, 129, 129)
+    border: 2px solid rgb(230, 129, 129);
 }
 
-.princing {
+.pricing {
     background-color: whitesmoke;
 }
 
@@ -61,7 +49,7 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.newletter {
+.newsletter {
     background-color: rgba(29, 108, 99, 0.89);
     padding-top: 100px;
 }
@@ -80,14 +68,13 @@
     height: 300px;
     width: 270px;
 }
-.back-to-top {
 
+.back-to-top {
     bottom: 50%;
     right: 50%;
     transform: translate(50%, 50%);
     z-index: 99;
 }
-
 
 .back-to-top button {
     display: flex;
@@ -108,4 +95,43 @@
     border-right: 6px solid transparent;
     border-bottom: 6px solid white;
     margin-right: 5px;
+}
+
+.nav-item.active::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: orange;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.nav-item:hover,
+.nav-item.active {
+    color: orange;
+}
+
+.nav-item {
+    background: none;
+    border: none;
+    padding: 0;
+    font-size: 16px;
+    cursor: pointer;
+    color: #333;
+    position: relative;
+    transition: color 0.3s, border-bottom-width 0.3s;
+}
+
+.nav-item.active::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 2px;
+    background-color: orange;
+    transition: width 0.3s ease-in-out;
+    transform-origin: left;
 }
